# gem-daq-code

./: .gitattributes  .gitignore  Makefile  README.md
data/: allregs.xml  allregsnonfram.xml  clocking_registers.xml  connections_ch.xml  counter_registers.xml  counter_reset_registers.xml  ctrlregs.xml  extraregs.xml  fast_signals_address_table.xml  flashregs.xml  fmcregs.xml  four_char_id.xml  geb_vfat_address_table.xml  glib_address_table.xml  glib_clk_ctrl.xml  glib_optical_links.xml  glib_status_register.xml  glib_system_registers.xml  global_registers.xml  icapregs.xml  myaddress.xml  myconnections.xml  optical_link_registers.xml  optohybrid_address_table.xml  optohybrid_optical_links.xml  optohybrid_v1_address_table.xml  optohybrid_v1_slaves.xml  simpleregs.xml  spiregs.xml  sramregs.xml  sysregs.xml  testbeam_registers.xml  trigger_registers.xml  user_address_table.xml  vfat_address_table.xml  vfat_tracking_data.xml  vfatchanregs.xml  vfatregs.xml  vfatslaves.xml
dqm-light/include/dqm/: Event.h
dqm-light/scripts/: compile_code_for_root.sh
dqm-light/src/common/: gem-read-events.cc
gem-light-dqm/: .gitignore  compile.sh
gem-light-dqm/dqm-reader/: .gitignore  Doxyfile-dqm-reader  Makefile
gem-light-dqm/dqm-reader/scripts/: compile_MacOs_code_for_root.sh  compile_code_for_root.sh  ttree_and_root.sh
gem-light-dqm/dqm-reader/src/common/: dqm-read-make-ttree.cxx  gem-read-events.cxx
gem-light-dqm/dqm-root/: Makefile  input.txt  treeReaderExample.cxx
gem-light-dqm/dqm-root/data/: v2b_schema_chips0-1.csv  v2b_schema_chips16-17.csv  v2b_schema_chips18-23.csv  v2b_schema_chips2-15.csv  v2b_schema_joonas_chips0-1.csv  v2b_schema_joonas_chips16-17.csv  v2b_schema_joonas_chips18-23.csv  v2b_schema_joonas_chips2-15.csv
gem-light-dqm/dqm-root/data_bkp/: test_v2b_modified.csv  v2b_schema_chips0-1.csv  v2b_schema_chips16-17.csv  v2b_schema_chips2-15.csv
gem-light-dqm/dqm-root/include/: Hardware_histogram.h
gem-light-dqm/dqm-root/include/GEMClusterization/: GEMClusterizer.h  GEMStrip.h  GEMStripCollection.h
gem-light-dqm/dqm-root/include/GEMRecHit/: GEMRecHit.h
gem-light-dqm/dqm-root/src/common/: AMC13.cxx  AMC13_histogram.cxx  AMC_histogram.cxx  GEB_histogram.cxx  logger.cxx  (+19 more)
gem-light-dqm/dqm-root/temp/: run000015_bench_TAMU_2016-03-30.raw.root  run000055_bench_TAMU_2016-03-04.raw.root
gem-light-dqm/gemtreewriter/: .gitignore  Makefile
gem-light-dqm/gemtreewriter/include/: Event.h  EventLinkDef.h  GEMAMC13EventFormat.h
gemdaq-testing/: .gitattributes  .gitignore  Makefile
gemdaq-testing/config/: gemostag  mfDefs.gem  mfRPM_gem.rules
gemdaq-testing/gemHwMonitor/: .gitignore  Makefile  Makefile.debug  test.xml
gemdaq-testing/gemHwMonitor/xml/: gemHwMonitor.xml
gemdaq-testing/gembase/: .gitignore  Makefile  Makefile.debug
gemdaq-testing/gembase/xml/: entities.ent  gem_conf.xml  gem_conf_proposal.xml  gem_conf_tamu_test.xml  gem_conf_tamu_test1.xml  gem_conf_tamu_test_split.xml  gem_tamu_OH.xml  gem_test_904.xml  gem_test_904_AMC1.xml  gem_test_904_GLIB2.xml  gem_test_904_MCH1.xml  gem_test_904_New.xml  gem_test_904_OH1.xml  gem_test_904_V0.xml  gem_test_tif.xml  gembase.xml  sys_conf.xml
gemdaq-testing/gemhardware/: .gitignore  Makefile  Makefile.debug  xrun.sh
gemdaq-testing/gemhardware/amc13/: Makefile
gemdaq-testing/gemhardware/html/: vfatmanager.css
gemdaq-testing/gemhardware/mp7/: Makefile
gemdaq-testing/gemhardware/xml/: GEMController.xml  gem_conf.xml  gemsupervisor.xml  vfatmanager.xml  vfatthresholdscan.xml
gemdaq-testing/gemrcms/gemLevelOneFM/: build.xml
gemdaq-testing/gemreadout/: .gitignore  Makefile
gemdaq-testing/gemreadout/data/: slot_table.csv  slot_table_904.csv  slot_table_904_2.csv  slot_table_904_2_copy.csv  slot_table_TAMU.csv  slot_table_TAMUv2.csv  slot_table_testbeam_OH0.csv  slot_table_testbeam_OH1.csv
gemdaq-testing/gemsupervisor/: .gitignore  Makefile  Makefile.debug
gemdaq-testing/gemsupervisor/xml/: GEMGLIBSupervisorWeb.xml  GEMGLIBSupervisorWeb1.xml  GEMGLIBSupervisorWeb_v1.xml  GEMGLIBSupervisorWeb_v2.xml  gemsupervisor.xml  testbeamutils.xml  testbeamutils_TAMU.xml  thresholdscan.xml
gemdaq-testing/gemutils/: Makefile  Makefile.debug
gemdaq-testing/setup/: make_xdaq_softlinks.sh  paths.sh  setup.sh  xdaqgem.setup.csh  xdaqgem.setup.sh
gemdaq-testing/setup/etc/: connections_ch.xml
gemdaq-testing/setup/scripts/: glib_board_info.py  glib_board_info_uhal.py  glib_system_info_uhal.py  glib_user_functions_uhal.py  glib_vfat_test.py  glib_vfat_test_uhal.py  optohybrid_board_info.py  optohybrid_board_info_uhal.py  registers.py  registers_uhal.py  vfat_functions.py  vfat_functions_uhal.py
glib-testing/: CMakeLists.txt  README  compile.sh  setup.csh  setup.sh
glib-testing/inc/: classTest.h  glib.h
glib-testing/src/: classTest.cpp  glib.cpp
glib-testing/tests/: glibsystem.cpp  readtemps.cpp  simple.cpp  spitests.cpp  sturdy.cpp  vfatcomm.cpp
ldqm-browser/: .gitignore
ldqm-browser/LightDQM/: manage.py  test.py
ldqm-browser/LightDQM/LightDQM/: settings.py  urls.py  views.py  wsgi.py
ldqm-browser/LightDQM/ldqm_db/: admin.py  models.py
ldqm-browser/LightDQM/webdaq/: amc13manager.py  amcmanager.py  apps.py  forms.py  glib_system_info_uhal.py  helper.py  registers_uhal.py  urls.py  views.py
vfat-testing/: CMakeLists.txt  README  compile.sh
vfat-testing/cmake/modules/: FinduHAL.cmake
vfat-testing/inc/: glib.h  vfat.h
vfat-testing/src/: glib.cpp  vfat.cpp
vfat-testing/tests/: vfattest.cpp
(+421 files in other folders)
